ready for deployment

--- a/templates/index.html
+++ b/templates/index.html
@@ -74,7 +74,7 @@ body {
     /* background: radial-gradient(ellipse at bottom, #0a0a0a 0%, #000000 100%); */
     background-size: cover; 
     padding-bottom: 120px;
-    background-image: url(/static/images/wallpaper.png);
+    /* background-image: url(/static/images/wallpaper.png); */
 
 }
 
@@ -506,7 +506,7 @@ input[type="radio"] {
         </nav>
     </header>
 
-    <main class="hero-section">
+    <main class="hero-section" style="background-image: url('{% static "images/wallpaper.png" %}');">
         <div class="hero-content" >
             <div class="badge">New <button>Pre-Book the Platform ➔</button></div>
             <h1>Launching "Happening"</h1>
