--- a/templates/index.html
+++ b/templates/index.html
@@ -8,7 +8,7 @@
     <link href="https://assets.calendly.com/assets/external/widget.css" rel="stylesheet">
     <link rel="stylesheet" href="{% static 'styles.css' %}">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css">
-    <link rel="icon" href="{% static 'images/group 539.png' %}" type="image/x-icon">
+    <link rel="icon" href="{% static 'images/group 539.png' %}" type="image/png">
     <script src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
     <style>
         * {
